# Mylenti_Application

./: .cta.json  .env.development  .env.production  .gitignore  .prettierignore  LICENSE.txt  LICENSE_en.txt  LICENSE_vi.txt  README.md  build.py  build.ts  build_and_run.bat  donate_voice.spec  download-cloudflare.py  latest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: changelog-config.json
.github/workflows/: build-settings.yml
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: donate_voice.py
src-tauri/src/: donate_events.rs  gtts.rs  lib.rs  local_http_server.rs  main.rs  tts_http_server.rs  tunnel.rs  update.rs  utils.rs  websocket.rs
src-tauri/~/.tauri/: myapp.key  myapp.key.pub
src/class/: AutoUpdateTauriManager.ts  CloudflareController.ts  DonateVoiceController.ts  OAuthServerManager.ts  WebSocketTauriManager.ts
src/data/: bank.ts  chart.ts  config.ts  db.YouTubeChat.ts  db.YouTubeChatCollections.ts  db.sanitizeOBSOverlaySettings.ts  discord.sqlite.ts  fallback.ts  header.ts  index.ts  oauth.ts  obs-overlay.ts  sepay.sqlite.ts  setting-app.ts  settings.ts
src/env/: client.ts  server.ts
src/func/: auth.ForgetPasword.ts  auth.Info.ts  auth.Log.ts  auth.Oauth.ts  auth.Profile.ts  auth.SupabaseLog.ts  auth.SupabaseOauth.ts  auth.SupabaseUser.ts  auth.UpdateInfo.ts  auth.User.ts  auth.discord.ts  auth.googleOBS.ts  db.Bank.ts  db.DiscordSQLite.ts  db.ListenSepayAlert.ts  db.SupabaseBank.ts  db.SupabaseProfile.ts  db.YouTubeChat.ts  db.YouTubeChatFunc.ts  db.fetchMetadata.ts  db.sanitizeOBSOverlaySettings.ts  fn.logInWithOauth.ts  fn.stragery.ts  logInWithOauth.ts  stragery.ts  websocket.DonateTranscation.ts  websocket.OBSSetting.ts  websocket.YouTubeMessage.ts  websocketWebsite.DonateTranscation.ts  websocketWebsite.OBSSetting.ts  websocketWebsite.YouTubeMessage.ts
src/hooks/: createMutations.ts  use-donate-upload.ts  use-emoji-upload.ts  use-file-upload.ts  use-files-upload.ts  use-link-direct-upload.ts  useAuthDiscordInfo.ts  useAuthInfo.ts  useCroppedAvatar.tsx  useDimension.ts  useDiscordSepayAlertSend.ts  useFormHook.ts  useIsClient.ts  useOBSConnectWebSocket.ts  useRustOBSSettingsSync.ts  useSQLiteDiscordInfo.ts  useSyncStore.ts  useTauriCheckUpdate.ts  useTauriSideEffect.ts  useTprcContext.ts  useTunnelStatus.ts  useWebSocketOBS.ts
src/lib/: convertLinksToFiles.ts  getCroppedImg.ts  getImageDimension.ts  publishImage.ts  queries.ts  safeJSONMessage.ts  safeParseMessage.ts  socket.safeJSONMessage.ts  supabaseBrowser.ts  supabaseServer.ts  utils.ts
src/routes/: __root.tsx  api.trpc.$.tsx  auth.callback.tsx  auth.googleOBS.tsx  community.ke-toan.tsx  community.ly-lich.tsx  community.ngan-hang.tsx  dang-ky.tsx  dang-nhap.tsx  index.tsx  ke-toan.tsx  khoi-phuc.tsx  ly-lich.tsx  (+11 more)
(+198 files in other folders)
