[package]
name = "Mylenti"
version = "0.1.0"
description = "Mylenti's OBS Overlay"
authors = ["khoiw04"]
license = "Proprietary"
repository = "https://github.com/khoiw04/OBS_Mylenti"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
axum = { version = "0.8.4", features = ["tokio", "http1"] }
hyper = { version = "1.7.0", features = ["full"] }
tower = "0.5.2"
tokio = "1.47.1"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-websocket = "2"
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
chrono = "0.4.42"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
http = "1.3.1"
tauri-plugin-oauth = "2"
tauri-plugin-localhost = "2"
url = "2.5.7"
tauri-utils = "2.7.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = "0.8.6"
lazy_static = "1.5.0"
dirs = "6.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
